--- a/DR/app/src/main/res/layout/fragment_home.xml
+++ b/DR/app/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnSearch"
+        android:id="@+id/btnChanel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="165dp"
