--- a/DR/app/src/main/res/layout/fragment_session_list.xml
+++ b/DR/app/src/main/res/layout/fragment_session_list.xml
@@ -32,6 +32,7 @@
         android:layout_marginRight="175dp"
         android:layout_marginBottom="500dp"
         android:textColor="#FF0000"
+        android:textSize="24sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +48,7 @@
         android:layout_marginRight="175dp"
         android:layout_marginBottom="470dp"
         android:textColor="#FF0000"
+        android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +64,7 @@
         android:layout_marginEnd="175dp"
         android:layout_marginRight="175dp"
         android:layout_marginBottom="440dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
