--- a/DR/app/src/main/res/layout/fragment_session_list.xml
+++ b/DR/app/src/main/res/layout/fragment_session_list.xml
@@ -64,6 +64,7 @@
         android:layout_marginEnd="175dp"
         android:layout_marginRight="175dp"
         android:layout_marginBottom="440dp"
+        android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
