--- a/DR/app/src/main/res/layout/fragment_login.xml
+++ b/DR/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#DFFFFFFF"
     android:paddingLeft="@dimen/fragment_horizontal_margin"
     android:paddingTop="@dimen/fragment_vertical_margin"
     android:paddingRight="@dimen/fragment_horizontal_margin"
@@ -51,6 +52,7 @@
         android:layout_marginEnd="48dp"
         android:enabled="true"
         android:text="@string/action_sign_in"
+        app:backgroundTint="#E60C55D5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -69,7 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView2"
@@ -100,7 +102,7 @@
         android:layout_marginBottom="384dp"
         android:includeFontPadding="false"
         android:text="@string/link_sign_up"
-        android:textColor="@color/purple_500"
+        android:textColor="#E60C55D5"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
