--- a/DR/app/src/main/res/layout/fragment_my_bookings.xml
+++ b/DR/app/src/main/res/layout/fragment_my_bookings.xml
@@ -23,7 +23,8 @@
             android:id="@+id/tableRow"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="50dp"
+            android:background="#DFFFFFFF">
 
             <TextView
                 android:id="@+id/textView3"
@@ -85,6 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="425dp"
+        android:background="#DFFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
