--- a/DR/app/src/main/res/layout/single_time_slot.xml
+++ b/DR/app/src/main/res/layout/single_time_slot.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="#95FFFFFF"
+    android:background="#32000000"
     android:hapticFeedbackEnabled="false">
 
     <LinearLayout
@@ -46,6 +46,7 @@
             android:layout_weight="1"
             android:text="@string/chanel"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:backgroundTint="#E60C55D5" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
