--- a/DR/app/src/main/res/layout/fragment_my_bookings.xml
+++ b/DR/app/src/main/res/layout/fragment_my_bookings.xml
@@ -1,97 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.myBookings.MyBookingsFragment" >
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    tools:context=".ui.myBookings.MyBookingsFragment">
 
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="706dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TableRow
+        android:id="@+id/tableRow"
+        android:layout_width="match_parent"
+        android:layout_height="27dp"
+        android:background="#DFFFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/bookingList"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <TableRow
-            android:id="@+id/tableRow"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="50dp"
-            android:background="#DFFFFFFF">
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
+            android:background="#DA10208A"
+            android:gravity="center"
+            android:text="@string/reference_number"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_marginStart="3dp"
-                android:layout_marginLeft="3dp"
-                android:background="#A83EFD45"
-                android:gravity="center"
-                android:text="Reference Number"
-                android:textColor="#9C9A9A"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            android:background="#DA10208A"
+            android:gravity="center"
+            android:text="@string/doctor_s_name"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:background="#A83EFD45"
-                android:gravity="center"
-                android:text="Doctor's Name"
-                android:textColor="#9C9A9A"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            android:background="#DA10208A"
+            android:gravity="center"
+            android:text="@string/date"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:background="#A83EFD45"
-                android:gravity="center"
-                android:text="Date"
-                android:textColor="#9C9A9A"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginRight="3dp"
+            android:background="#DA10208A"
+            android:gravity="center"
+            android:text="@string/time"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_marginEnd="3dp"
-                android:layout_marginRight="3dp"
-                android:background="#A83EFD45"
-                android:gravity="center"
-                android:text="Time"
-                android:textColor="#9C9A9A"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-        </TableRow>
-    </TableLayout>
+    </TableRow>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bookingList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="425dp"
         android:background="#DFFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tableRow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
