--- a/DR/app/src/main/res/layout/fragment_profile.xml
+++ b/DR/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:background="#DFFFFFFF"
     tools:context=".ui.profile.ProfileFragment">
 
@@ -11,19 +12,20 @@
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginLeft="125dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="125dp"
-        android:layout_marginRight="125dp"
-        android:layout_marginBottom="492dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="86dp"
+        android:layout_marginLeft="86dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="86dp"
+        android:layout_marginRight="86dp"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/user_profile" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -51,6 +53,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="@string/name"
+                android:textColor="#000000"
                 android:textSize="16sp" />
 
             <EditText
@@ -61,7 +64,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textColor="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -77,6 +81,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="@string/address"
+                android:textColor="#000000"
                 android:textSize="16sp" />
 
             <EditText
@@ -87,7 +92,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textColor="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -103,6 +109,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="@string/email"
+                android:textColor="#000000"
                 android:textSize="16sp" />
 
             <EditText
@@ -113,7 +120,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="#000000" />
 
         </LinearLayout>
 
@@ -130,6 +138,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="@string/tp"
+                android:textColor="#000000"
+                android:textColorHint="#000000"
                 android:textSize="16sp" />
 
             <EditText
@@ -140,7 +150,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textColor="#000000" />
         </LinearLayout>
 
         <Button
